--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apexcharts": "^3.17.0",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.2.0",
     "mui-datatables": "^2.14.0",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.6",
