--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alethio-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://HagiaSofiya.github.io/alethio-demo",
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
